css and content addition

--- a/index.html
+++ b/index.html
@@ -1,11 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Odin Positions-Floats Lesson</title>
 </head>
+
 <body>
-    
+    <section>
+        <header>
+            <h1>
+                Lorem ipsum dolor sit.
+            </h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae exercitationem, nulla quaerat alias,
+                voluptates
+                dolorem perspiciatis asperiores, odio fugit nihil consequatur enim. Facere rerum assumenda alias, eos
+                maiores
+                doloribus praesentium totam ipsa officia? Totam, impedit.</p>
+        </header>
+
+        <div class="main-container">
+
+            <div class="container">
+                <div class="img-container">
+                    <img src="#" alt="">
+                </div>
+                <p class="text"><span><strong>Lorem, ipsum.</strong></span>
+                    &nbsp;Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident porro consequuntur
+                    sapiente,
+                    repellendus, inventore obcaecati officia numquam amet dolores sit natus illum magnam facilis eveniet
+                    dolore
+                    molestiae nihil molestias nisi possimus sint odit! Amet dignissimos est beatae dicta inventore
+                    facere!
+                </p>
+            </div>
+            <div class="container">
+                <div class="img-container">
+                    <img src="#" alt="">
+                </div>
+                <p class="text"><span><strong>Lorem, ipsum.</strong></span>
+                    &nbsp;Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident porro consequuntur
+                    sapiente,
+                    repellendus, inventore obcaecati officia numquam amet dolores sit natus illum magnam facilis eveniet
+                    dolore
+                    molestiae nihil molestias nisi possimus sint odit! Amet dignissimos est beatae dicta inventore
+                    facere!
+                </p>
+            </div>
+            <div class="container">
+                <div class="img-container">
+                    <img src="#" alt="">
+                </div>
+                <p class="text"><span><strong>Lorem, ipsum.</strong></span>
+                    &nbsp;Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident porro consequuntur
+                    sapiente,
+                    repellendus, inventore obcaecati officia numquam amet dolores sit natus illum magnam facilis eveniet
+                    dolore
+                    molestiae nihil molestias nisi possimus sint odit! Amet dignissimos est beatae dicta inventore
+                    facere!
+                </p>
+            </div>
+            <div class="container">
+                <div class="img-container">
+                    <img src="#" alt="">
+                </div>
+                <p class="text"><span><strong>Lorem, ipsum.</strong></span>
+                    &nbsp;Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident porro consequuntur
+                    sapiente,
+                    repellendus, inventore obcaecati officia numquam amet dolores sit natus illum magnam facilis eveniet
+                    dolore
+                    molestiae nihil molestias nisi possimus sint odit! Amet dignissimos est beatae dicta inventore
+                    facere!
+                </p>
+            </div>
+            <div class="container">
+                <div class="img-container">
+                    <img src="#" alt="">
+                </div>
+                <p class="text"><span><strong>Lorem, ipsum.</strong></span>
+                    &nbsp;Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident porro consequuntur
+                    sapiente,
+                    repellendus, inventore obcaecati officia numquam amet dolores sit natus illum magnam facilis eveniet
+                    dolore
+                    molestiae nihil molestias nisi possimus sint odit! Amet dignissimos est beatae dicta inventore
+                    facere!
+                </p>
+            </div>
+            <div class="container">
+                <div class="img-container">
+                    <img src="#" alt="">
+                </div>
+                <p class="text"><span><strong>Lorem, ipsum.</strong></span>
+                    &nbsp;Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident porro consequuntur
+                    sapiente,
+                    repellendus, inventore obcaecati officia numquam amet dolores sit natus illum magnam facilis eveniet
+                    dolore
+                    molestiae nihil molestias nisi possimus sint odit! Amet dignissimos est beatae dicta inventore
+                    facere!
+                </p>
+            </div>
+            <div class="container">
+                <div class="img-container">
+                    <img src="#" alt="">
+                </div>
+                <p class="text"><span><strong>Lorem, ipsum.</strong></span>
+                    &nbsp;Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident porro consequuntur
+                    sapiente,
+                    repellendus, inventore obcaecati officia numquam amet dolores sit natus illum magnam facilis eveniet
+                    dolore
+                    molestiae nihil molestias nisi possimus sint odit! Amet dignissimos est beatae dicta inventore
+                    facere!
+                </p>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
