--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
 </head>
 
 <body>
+    <div class="sticky">
+        <nav>
+            <div class="branding">
+                <span>Lorem ipsum dolor.</span>
+            </div>
+            <div class="topic">
+                <span style="font-weight: bolder;">Lorem&ipsum.</span>
+                <span>|</span>
+                <span>Lorem ipsum dolor sit amet.</span>
+            </div>
+            <div class="social">
+                <span>&#9767;</span>
+                <span>&#9768;</span>
+                <span>&#9757;</span>
+                <span>&#9751;</span>
+            </div>
+        </nav>
+    </div>
     <section>
         <header>
             <h1>
@@ -23,6 +41,19 @@
 
         <div class="main-container">
 
+            <div class="container">
+                <div class="img-container">
+                    <img src="#" alt="">
+                </div>
+                <p class="text"><span><strong>Lorem, ipsum.</strong></span>
+                    &nbsp;Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident porro consequuntur
+                    sapiente,
+                    repellendus, inventore obcaecati officia numquam amet dolores sit natus illum magnam facilis eveniet
+                    dolore
+                    molestiae nihil molestias nisi possimus sint odit! Amet dignissimos est beatae dicta inventore
+                    facere!
+                </p>
+            </div>
             <div class="container">
                 <div class="img-container">
                     <img src="#" alt="">
